--- a/marriage/.settings/org.eclipse.wst.common.component
+++ b/marriage/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="marriage">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="/marriage"/>
         <property name="java-output-path" value="/marriage/WebRoot/WEB-INF/classes"/>
     </wb-module>
