--- a/marriage/WebRoot/css/index.css
+++ b/marriage/WebRoot/css/index.css
@@ -7,6 +7,9 @@
 				color: red;
 				text-decoration: none;
 			}
+			a:hover{
+				text-decoration:underline;
+			}
 			
 			body{
 				background-color: #f6f6f6;
@@ -51,6 +54,11 @@
 				margin: 0 auto;
 				font-size: 28px;
 				/*border: 1px solid black;*/
+			}
+			#top .top_left img{
+				width: 150px;
+				height: 80px;
+				margin-top: 20px;
 			}
 			
 			/*导航栏*/
