--- a/marriage/WebRoot/css/jdbcSqlBooks.css
+++ b/marriage/WebRoot/css/jdbcSqlBooks.css
@@ -123,8 +123,11 @@
 				font-weight: 600;
 				font-size: 16px;
 			}
+			#content a{
+				color: black;
+			}
 			#News-Pagination{
-				margin-left:570px;
+				margin-left:540px;
 				margin-top:12px;
 				margin-bottom:50px;
 			}
